# base-image

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.extend  Dockerfile.multi  Dockerfile.runtime  README.md  build-prod-backup.sh  build-prod-restore-backup.sh  build-staging-to-prod.sh  build.sh  fast_stable_diffusion_AUTOMATIC1111.ipynb  gpu_names_cache.json  retag.sh
.github/: AGENTS.md
.github/workflows/: build-a1111.yml  build-ace-step.yml  build-aio-studio-base.yml  build-aio-studio.yml  build-base-image.yml  build-chatterbox.yml  build-comfyui.yaml  build-comfyui.yml  build-fluxgym.yml  build-invokeai.yml  build-linux-desktop.yml  build-llama-cpp.yml  build-ollama.yml  build-oobabooga.yml  build-openwebui.yml  build-ostris-ai-toolkit.yml  build-vllm.yml  (+20 more)
docs/: context-map.md  invariants.md  lint-rules.md
external_image_bootstrap/: core.sh
portal-aio/: README.md  requirements.txt
provisioning/: entrypoint-jupyter-hotfix.sh  langflow.yaml
provisioning_scripts/: ACE-step.sh  dia_1.6b.sh  invokeai.sh  langflow.sh  llama-cpp.sh  ollama.sh  ostris-ai-toolkit.sh  vllm-nightly.sh  wan2gp.sh  whisper-webui-api.sh
tools/: convert-non-vast-image.sh
tools/imagegen/: README.md  pyproject.toml
tools/imagegen/imagegen/: __init__.py  basetag.py  bump.py  cli.py  discover.py  dockerfile.py  generate.py  linter.py  portal.py  portal_smoke.py  qa.py
tools/imagegen/smoke/: bind-check.sh
tools/imagegen/tests/: _stdlib_runner.py  test_basetag.py  test_generate.py  test_linter.py  test_portal.py  test_portal_smoke.py  test_qa_launcher.py
(+525 files in other folders)
